# btc_miner_flutter

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/btc_miner_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  utils.dart
ios/: btc_miner.podspec
ios/Classes/: btc_miner.c  btc_miner.cpp
lib/: btc_miner.dart  btc_miner_bindings_generated.dart
src/: CMakeLists.txt  btc_miner.c  btc_miner.cpp  btc_miner.h
